# system-programming

Task_6/: CMakeLists.txt  meson.build
Task_6/src/: meson.build
Task_6/src/main/: Fig.h  Polynomial.h  main.cpp
Task_6/src/test/: FigurTest.cpp  PolynomialTest.cpp  meson.build
Task_7/: CMakeLists.txt
Task_7/src/main/: ln80c_buffer.h  stat_buffer.h
Task_7/src/test/: main.cpp  meson.build  test_for_ln.cpp
Task_8/Task_8.1/: CMakeLists.txt  meson.build
Task_8/Task_8.1/src/: meson.build
Task_8/Task_8.1/src/main/: meson.build  parallel.hpp
Task_8/Task_8.1/src/test/: meson.build  sort_test.cpp
Task_8/Task_8.2/: CMakeLists.txt
Task_8/Task_8.2/src/main/: main.cpp  parallel.hpp
Task_8/Task_8.2/src/test/: TableTest.cpp  meson.build
Task_9/: CMakeLists.txt  Doxyfile.in  meson.build
Task_9/Doc/html/: graph_legend.html  index.html
Task_9/Doc/latex/: refman.tex
Task_9/src/project/: Task_2_test.cpp  meson.build
Task_9/src/project/Task_10/: fan.hpp
Task_9/src/project/Task_2/: MyVector.hpp
Task_9/src/project/Task_3/: Fanctions.h
Task_9/src/project/Task_4/: Matrix.h  Matrix.hpp  MyGuard.h
Task_9/src/project/Task_5/: Mysrteam.hpp  man.hpp  sort.hpp
Task_9/src/test/: Task_10_test.cpp  Task_3_test.cpp  Task_4_test.cpp  Task_5_test_1.cpp  Task_5_test_2.cpp  meson.build
Work/: CMakeLists.txt
Work/src/MyVector/: MyVector.cpp  MyVector.h  MyVector.hpp
